<resources>
    <string name="app_name">MentalCounting</string>
    <string name="play">Play</string>
    <string name="lastscore">Score</string>

    <!--Menu-->
    <string name="compute_menu_label">Compute</string>
    <string name="main_menu_label">Menu</string>
    <string name="score_menu_label">Score</string>

    <!--Play activity-->
    <string name="enterResponse">Enter your response</string>
    <string name="button_reponse">Submit</string>
    <string name="operation_template" translatable="false">The operation to solve : %1$d %2$s %3$d</string>
    <string name="operation_text">Text Vew</string>
    <string name="success_text">You succeeded</string>
    <string name="fail_text">You failed</string>

    <!--Score-->
    <string name="number_operation">Total numbers of operations</string>
    <string name="percent_answer">Success percentage</string>
    <string name="last_operation">Last operation</string>
    <string name="reset_button">New operation</string>
    <string name="error_text">Please enter an answer</string>
</resources>